--- a/index.html
+++ b/index.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Dashboard2</title>
+
+    <script>
+    
+    </script>
+    
 </head>
 <body>
-    <div class="row rowoverlay">
-        <div class="col-lg-1 coloverlay">
-            <div class="container">
-                <div class="sidebar-header">
+    <div class="container">
+        <div class="row rowoverlay">
+            <div class="col-lg-1 coloverlay">
+                <div>
                     <img src="/icons/ListIcon2.png" class="listIcon"/>
                 </div>
                 <div class="navbar">
                     <div class="navbar-inner">
                         <div class="container-fulid">
-                            <ul class="nav component">
-                                <li class="choosen">
-                                    <div class="dashboardIcon">
-                                        <img src="/icons/DashboardIcon3.png"> 
-                                    </div>
+                            <ul class="nav">
+                                <li>      
+                                    <img src="/icons/DashboardIcon3.png" class="dashboardIcon">                                                         
                                     <label class="dashboardLabel">Dashboard</label>
                                  </li>
                                  <li class="calendarIcon">
@@ -45,6 +49,24 @@
                                 </li>
                             </ul>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-11>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-9">
+                        <label class="title">Dashboard</label>
+                    </div>
+                    <div class="col-lg-1">
+                        <button class="button1">Appointment</button>                       
+                    </div>
+                    <div class="col-lg-1">
+                        <button><img src="/icons/SettingsIconbell.png"></button>
+                    </div>
+                    <div class="col-lg-1">
+                        <button><img src="/icons/clarity_settings-line.png"></button>
                     </div>
                 </div>
             </div>
